# thorvg

./: .clang-format  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .packit.yml  .travis.yml  AUTHORS  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS  CONTRIBUTORS.md  COPYING  Doxyfile  LICENSE  README  README.md  build.sh  code_format  compile_commands.json  coverage-gcc.sh  coverage-gcovr.sh  default.profraw  ios_x86_64_cross.txt  meson.build  meson_options.txt  thorvg.manifest  tvg-format.sh  wasm_build.sh  wasm_build_origin.sh  wasm_build_tsd.sh  wasm_canvaskit_build.sh  wasm_cross.txt  wasm_webgpu_build.sh
examples/: Accessor.cpp  AnimateMasking.cpp  Animation.cpp  Arc.cpp  Blending.cpp  BoundingBox.cpp  Capi.cpp  ClipPath.cpp  Clipping.cpp  Common.h  CrashDemo.cpp  CustomTransform.cpp  DataLoad.cpp  DirectUpdate.cpp  Duplicate.cpp  EffectDropShadow.cpp  EffectFill.cpp  EffectGaussianBlur.cpp  EvasPlatform.cpp  Example.h  FillRule.cpp  FillSpread.cpp  GifAnimation.cpp  GifSaver.cpp  GradientMasking.cpp  GradientStroke.cpp  GradientTransform.cpp  Gtk2Platform.cpp  ImageRotation.cpp  ImageScaleDown.cpp  ImageScaleUp.cpp  ImageScaling.cpp  Interaction.cpp  Intersects.cpp  InvLumaMasking.cpp  InvMasking.cpp  LinearGradient.cpp  Lottie.cpp  LottieExpressions.cpp  LottieExtension.cpp  (+55 more)
examples/resources/lottie/: 11555.json  16266.json  1f409.json  32266.json  43391.json  R_QPKIVi.json  balloons_with_string.json  button.json  calculator.json  crowds.json  day_to_night.json  earth_hour.json  emoji.json  error_404.json  foodrating.json  frog_vr.json  gardient_rot.json  ghost.json  ghost2.json  gradient_ball.json  graph.json  (+24 more)
perf/: meson.build  perfJpg.cpp
sdl_example/: gl_example.cc  hello_world.cc  meson.build
src/: meson.build
src/bindings/: meson.build
src/common/: meson.build  tvgAllocator.h  tvgArray.h  tvgBezier.cpp  tvgColor.cpp  tvgColor.h  tvgCommon.h  tvgCompressor.cpp  tvgCompressor.h  tvgEnv.h  tvgFont.h  tvgFormat.h  tvgInlist.h  tvgLines.cpp  tvgLock.h  tvgMath.cpp  tvgMath.h  tvgPngCodec.cpp  tvgPngCodec.h  tvgStr.cpp  tvgStr.h
src/examples/: Accessor.cpp  AnimateMasking.cpp  Animation.cpp  Arc.cpp  Async.cpp  Blending.cpp  BlendingModes.cpp  Boundary.cpp  Boundary2.cpp  Capi.cpp  ClipPath.cpp  Common.h  CustomTransform.cpp  DataLoad.cpp  DirectUpdate.cpp  Duplicate.cpp  FillRule.cpp  GifSaver.cpp  GradientMasking.cpp  GradientStroke.cpp  GradientTransform.cpp  ImageScaleDown.cpp  ImageScaleUp.cpp  InvLumaMasking.cpp  InvMasking.cpp  LinearGradient.cpp  LoadPng.cpp  Lottie.cpp  LottieExtension.cpp  LottieSlot.cpp  LumaMasking.cpp  MaskedClipPath.cpp  Masking.cpp  MaskingMethods.cpp  MergeShapes.cpp  MultiCanvas.cpp  MultiShapes.cpp  Opacity.cpp  Path.cpp  PathCopy.cpp  (+51 more)
src/extension/: meson.build
src/extensions/: meson.build
src/lib/: TvgEngine.cpp  meson.build  tvgAccessor.cpp  tvgAnimation.cpp  tvgAnimationImpl.h  tvgArray.h  tvgBezier.cpp  tvgBezier.h  tvgBinaryDesc.h  tvgCanvas.cpp  tvgCanvasBase.h  tvgCanvasImpl.h  tvgCommon.h  tvgEngine.cpp  tvgFill.cpp  tvgFill.h  tvgFrameModule.h  tvgGlCanvas.cpp  tvgInitializer.cpp  tvgIterator.cpp  tvgIteratorAccessor.h  tvgIteratorModule.h  tvgLinearGradient.cpp  tvgLoadModule.h  tvgLoader.cpp  tvgLoader.h  tvgLoaderMgr.cpp  tvgLoaderMgr.h  tvgLottie.cpp  tvgLottieImpl.h  tvgLzw.cpp  tvgLzw.h  tvgMath.h  tvgPaint.cpp  tvgPaint.h  tvgPicture.cpp  tvgPictureImpl.h  tvgPoint.h  tvgRadialGradient.cpp  tvgRender.cpp  (+23 more)
src/loaders/: meson.build
src/renderer/: meson.build  tvgAccessor.cpp  tvgAccessor.h  tvgAllocator.h  tvgAnimLoader.h  tvgAnimation.cpp  tvgAnimation.h  tvgBinaryDesc.h  tvgCanvas.cpp  tvgCanvas.h  tvgCommon.h  tvgFactory.cpp  tvgFactory.h  tvgFill.cpp  tvgFill.h  tvgFrameModule.h  tvgGlCanvas.cpp  tvgInitializer.cpp  tvgIteratorAccessor.h  tvgLoadModule.h  tvgLoader.cpp  tvgLoader.h  tvgLoaderMgr.cpp  tvgLoaderMgr.h  tvgMergePath.cpp  tvgMergePath.h  tvgPaint.cpp  tvgPaint.h  tvgPicture.cpp  tvgPicture.h  tvgRender.cpp  tvgRender.h  tvgSaveModule.h  tvgSaver.cpp  tvgScene.cpp  tvgScene.h  tvgShape.cpp  tvgShape.h  tvgShapeImpl.h  tvgSwCanvas.cpp  (+10 more)
src/savers/: meson.build
src/tools/: meson.build
src/utils/: meson.build  tvgArray.h  tvgBezier.cpp  tvgBezier.h  tvgLzw.cpp  tvgMath.cpp  tvgMath.h  tvgStr.cpp  tvgStr.h
src/wasm/: meson.build  thorvgwasm.cpp
src/windows/: meson.build  tvgWindow.cpp  tvgWindowImpl.h
test/: catch.hpp  engine.cpp  engine.h  makefile  meson.build  test.cpp  testAccessor.cpp  testAnimation.cpp  testArc.cpp  testArray.cpp  testAsync.cpp  testBlending.cpp  testBoundary.cpp  testCanvas.h  testCapi.c  testCommon.h  testComposition.cpp  testCustomTransform.cpp  testDirectUpdate.cpp  testDuplicate.cpp  testEngine.h  testFill.cpp  testGlCanvas.cpp  testGlEngine.cpp  testGlEngine.h  testGlHelpers.h  testGlShape.cpp  testGlWindow.cpp  testGlWindow.h  testGradient.cpp  testGradientTransform.cpp  testInitializer.cpp  testLinearGradient.cpp  testLottie.cpp  testMain.cpp  testMergeShapes.cpp  testMultiCanvas.cpp  testMultiShapes.cpp  testMultipleShapes.cpp  testPaint.cpp  (+37 more)
test/capi/: capiAnimation.cpp  capiFill.cpp  capiInitializer.cpp  capiLinearGradient.cpp  capiLottie.cpp  capiMain.cpp  capiPaint.cpp  capiPicture.cpp  capiRadialGradient.cpp  capiSavers.cpp  capiScene.cpp  capiShape.cpp  capiSwCanvas.cpp  capiText.cpp  meson.build  testBasic.cpp  testFill.cpp  testInitializer.cpp  testLinearGradient.cpp  testPaint.cpp  testRadialGradient.cpp  testShape.cpp  testSwCanvas.cpp
test/images/: rawimage_250x375.raw  tag.tvg  test.tvg  test3.json
test/regression/: check_same_image_size.py  settings.toml  settings_comparison.toml  settings_crash_leak.toml
test/resources/: audio_layer.json  lottieslot.json  rawimage_200x300.raw  resolver.json  slot.json  slot.lot  slot2.lot  tag.tvg  test.tvg  test10.json  test10.lot  test11.json  test11.lot  test12.json  test12.lot  test3.lot  test4.lot  test5.json  test5.lot  test6.lot  test7.lot  test8.lot  test9.lot
test/unit/: meson.build  testInitializer.cpp  testSavers.cpp  testScene.cpp  testWgEngine.cpp
(+2025 files in other folders)
