option('engines',
   type: 'array',
   choices: ['sw', 'gl_beta'],
   value: ['sw'],
   description: 'Enable Rasterizer Engine in thorvg')

option('loaders',
   type: 'array',
   choices: ['', 'tvg', 'svg', 'png', 'jpg', 'webp', 'lottie', 'all'],
   value: ['svg', 'tvg', 'lottie'],
   description: 'Enable File Loaders in thorvg')

option('savers',
   type: 'array',
   choices: ['', 'tvg', 'all'],
   value: [''],
   description: 'Enable File Savers in thorvg')

option('vector',
   type: 'boolean',
   value: false,
   description: 'Enable CPU Vectorization(SIMD) in thorvg')

option('bindings',
   type: 'array',
   choices: ['', 'capi', 'wasm_beta'],
   value: [''],
   description: 'Enable API bindings')

option('tools',
   type: 'array',
   choices: ['', 'svg2tvg', 'svg2png', 'all'],
   value: [''],
   description: 'Enable building thorvg tools')

option('examples',
    type: 'boolean',
    value: false,
    description: 'Enable building examples')

option('tests',
   type: 'boolean',
   value: false,
   description: 'Enable building Unit Tests')

option('log',
    type: 'boolean',
    value: false,
    description: 'Enable log message')

option('static',
    type: 'boolean',
    value: false,
    description: 'Force to use static linking modules in thorvg')
