option('engines',
   type: 'array',
   choices: ['sw', 'gl_beta', 'wg_beta'],
   value: ['sw'],
   description: 'Enable Rasterizer Engine in thorvg')

option('loaders',
   type: 'array',
   choices: ['', 'tvg', 'svg', 'png', 'jpg', 'lottie', 'ttf', 'webp', 'all'],
   value: ['svg', 'tvg', 'lottie', 'ttf'],
   description: 'Enable File Loaders in thorvg')

option('savers',
   type: 'array',
   choices: ['', 'tvg', 'gif', 'all'],
   value: [''],
   description: 'Enable File Savers in thorvg')

option('threads',
   type: 'boolean',
   value: true,
   description: 'Enable the multi-threading task scheduler in thorvg')

option('simd',
   type: 'boolean',
   value: false,
   description: 'Enable CPU Vectorization(SIMD) in thorvg')

option('bindings',
   type: 'array',
   choices: ['', 'capi', 'wasm_beta'],
   value: [''],
   description: 'Enable API bindings')

option('tools',
   type: 'array',
   choices: ['', 'svg2tvg', 'svg2png', 'lottie2gif', 'all'],
   value: [''],
   description: 'Enable building thorvg tools')

option('examples',
   type: 'boolean',
   value: false,
   description: 'Enable building examples')

option('tests',
   type: 'boolean',
   value: false,
   description: 'Enable building Unit Tests')

option('log',
   type: 'boolean',
   value: false,
   description: 'Enable log message')

option('static',
   type: 'boolean',
   value: false,
   description: 'Force to use static linking modules in thorvg')

option('extra',
   type: 'array',
   choices: ['', 'lottie_expressions'],
   value: ['lottie_expressions'],
   description: '"Enable support for exceptionally advanced features')